src/objects/Other_Financing_Source__c.object
<CustomObject>
    <description>LPAM Catch All for funding sources that don&apos;t fall into another category.</description>
    <fields>
        <fullName>Accrued_Interest__c</fullName>
        <label>Accrued Interest</label>
        <precision>17</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Amount__c</fullName>
        <label>Amount</label>
        <precision>17</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Funding_Source_Name__c</fullName>
        <description>The Name of the funding Source</description>
        <label>Funding Source Name</label>
        <length>250</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Interest_Rate__c</fullName>
        <label>Interest Rate</label>
        <precision>4</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Notes__c</fullName>
        <label>Notes</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Outstanding_Balance__c</fullName>
        <label>Outstanding Balance</label>
        <precision>17</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Project__c</fullName>
        <label>Project</label>
        <referenceTo>Loan_Project__c</referenceTo>
        <relationshipLabel>Other Financing Sources</relationshipLabel>
        <relationshipName>Other_Financing_Sources</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Term_Years__c</fullName>
        <label>Term (Years)</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Other Financing Source</label>
    <nameField>
        <displayFormat>OFS-{00000}</displayFormat>
        <label>OFSID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Other Financing Sources</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>